package com.par.jbfh.child.enums;

public enum Gender {
    MALE,
    FEMALE
}