package com.par.jbfh.exercise.enums;

public enum ExerciseType {
    ICE,
    LAND
}