package com.par.jbfh.exercise.enums;

public enum Focus {
    STRENGTH,
    ENDURANCE,
    COORDINATION,
    SPEED,
    FLEXIBILITY,
    TECHNICAL
}