package com.par.jbfh.exercise.enums;

public enum PreparationType {
    TECHNICAL,
    PHYSICAL,
    PSYCHOLOGICAL,
    TACTICAL
}