package com.par.jbfh.exercise.enums;

public enum TrainingPart {
    BEGINNING,
    MIDDLE,
    END
}