package com.par.jbfh.standard.enums;

public enum StandardUnit {
    SECONDS,
    MINUTES,
    CENTIMETERS,
    METERS
}