package com.par.jbfh.training.enums;

public enum Intensity {
    MAXIMUM,
    SUBMAXIMUM,
    HIGH,
    MEDIUM,
    LOW
}
