package com.par.jbfh.training.enums;

public enum LoadLevel {
    MAXIMUM,
    SUBMAXIMUM,
    HIGH,
    MEDIUM,
    LOW
}