package com.par.jbfh.training.enums;

public enum TrainingCycle {
    WEEK,
    MONTH,
    THREE_MONTHS,
    YEAR
}