package com.par.jbfh.training.enums;

public enum WorkMode {
    ANAEROBIC_ALACTIC,
    ANAEROBIC_MIXED,
    ANAEROBIC_LACTIC,
    AEROBIC,
    AEROBIC_RECOVERY
}
