@startuml JBFH_ER_Diagram
!theme plain
skinparam linetype ortho
skinparam entityBackgroundColor #FEFECE
skinparam entityBorderColor #A80036

entity "clubs" as club {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255) <<unique>>
  address : VARCHAR(500)
  description : VARCHAR(2000)
  logo_path : VARCHAR(500)
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "users" as user {
  * id : UUID <<PK>>
  --
  * username : VARCHAR(100) <<unique>>
  * password : VARCHAR(255)
  email : VARCHAR(255)
  * enabled : BOOLEAN
  club_id : UUID <<FK nullable>>
  last_seen_at : TIMESTAMP
  * created_at : TIMESTAMP
}

entity "roles" as role {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255) <<unique>>
}

entity "user_roles" as user_roles {
  * user_id : UUID <<FK>>
  * role_id : UUID <<FK>>
}

entity "teams" as team {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255)
  * year : INTEGER
  description : VARCHAR(2000)
  logo_path : VARCHAR(500)
  * active : BOOLEAN
  * club_id : UUID <<FK>>
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "team_coaches" as team_coach {
  * id : UUID <<PK>>
  --
  * team_id : UUID <<FK>>
  * user_id : UUID <<FK>>
}

entity "inventory" as inventory {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255)
  club_id : UUID <<FK nullable>>
  * active : BOOLEAN
  * created_at : TIMESTAMP
}

entity "exercises" as exercise {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255) <<unique>>
  description : VARCHAR(2000)
  * type : VARCHAR(50)  { ICE | LAND }
  picture_path : VARCHAR(500)
  url : VARCHAR(500)
  content : TEXT
  training_part : VARCHAR(50)  { BEGINNING | MIDDLE | END }
  preparation_type : VARCHAR(50)  { TECHNICAL | PHYSICAL | PSYCHOLOGICAL | TACTICAL }
  club_id : UUID <<FK nullable>>
  * active : BOOLEAN
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "exercise_focuses" as ex_focus {
  * exercise_id : UUID <<FK>>
  * focus : VARCHAR(50)  { STRENGTH | ENDURANCE | COORDINATION | SPEED | FLEXIBILITY | TECHNICAL }
}

entity "exercise_inventory" as ex_inv {
  * id : UUID <<PK>>
  --
  * exercise_id : UUID <<FK>>
  * inventory_id : UUID <<FK>>
}

entity "locations" as location {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255)
  * club_id : UUID <<FK>>
  * active : BOOLEAN
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "trainings" as training {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255)
  * date : DATE
  * time_start : TIME
  * time_end : TIME
  * location_id : UUID <<FK>>
  * team_id : UUID <<FK>>
  picture_path : VARCHAR(500)
  description : VARCHAR(2000)
  task_1 : VARCHAR(1000)
  task_2 : VARCHAR(1000)
  task_3 : VARCHAR(1000)
  * created_by : UUID <<FK>>
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "training_exercises" as training_ex {
  * id : UUID <<PK>>
  --
  * training_id : UUID <<FK>>
  * exercise_id : UUID <<FK>>
  * work_duration : INTEGER
  * intensity : VARCHAR(50)
  rest_duration : INTEGER
  explanation_duration : INTEGER
  work_mode : VARCHAR(50)
  total_time : INTEGER
  * load_level : VARCHAR(50)
  * repetitions : INTEGER  (default 1)
}

entity "template_trainings" as template_training {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255)
  description : VARCHAR(2000)
  picture_path : VARCHAR(500)
  task_1 : VARCHAR(1000)
  task_2 : VARCHAR(1000)
  task_3 : VARCHAR(1000)
  club_id : UUID <<FK nullable>>
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "template_training_exercises" as template_training_ex {
  * id : UUID <<PK>>
  --
  * template_training_id : UUID <<FK>>
  * exercise_id : UUID <<FK>>
  * work_duration : INTEGER
  * intensity : VARCHAR(50)
  rest_duration : INTEGER
  explanation_duration : INTEGER
  work_mode : VARCHAR(50)
  total_time : INTEGER
  * load_level : VARCHAR(50)
  * repetitions : INTEGER  (default 1)
}

entity "sets" as set {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255)
  training_part : VARCHAR(50)  { BEGINNING | MIDDLE | END }
  club_id : UUID <<FK nullable>>
  * created_at : TIMESTAMP
  updated_at : TIMESTAMP
}

entity "set_exercises" as set_ex {
  * id : UUID <<PK>>
  --
  * set_id : UUID <<FK>>
  * exercise_id : UUID <<FK>>
  * work_duration : INTEGER
  * intensity : VARCHAR(50)
  rest_duration : INTEGER
  explanation_duration : INTEGER
  work_mode : VARCHAR(50)
  total_time : INTEGER
  * load_level : VARCHAR(50)
  * repetitions : INTEGER  (default 1)
}

entity "children" as child {
  * id : UUID <<PK>>
  --
  * first_name : VARCHAR(100)
  * last_name : VARCHAR(100)
  middle_name : VARCHAR(100)
  * birth_year : INTEGER
  * gender : VARCHAR(10)
  * team_id : UUID <<FK>>
  * created_at : TIMESTAMP
}

entity "training_programs" as training_program {
  * id : UUID <<PK>>
  --
  * birth_year : INTEGER
  * load_level : VARCHAR(50)
  * cycle : VARCHAR(20)
  * percentage : DECIMAL(5,2)
  club_id : UUID <<FK nullable>>
  * created_at : TIMESTAMP
}

entity "standards" as standard {
  * id : UUID <<PK>>
  --
  * name : VARCHAR(255)
  * type : VARCHAR(50)
  * birth_year : INTEGER
  * unit : VARCHAR(20)
  * control_value : DECIMAL(10,2)
  club_id : UUID <<FK nullable>>
  * created_at : TIMESTAMP
}

entity "child_standards" as child_standard {
  * id : UUID <<PK>>
  --
  * child_id : UUID <<FK>>
  * standard_id : UUID <<FK>>
  * result_value : DECIMAL(10,2)
  * date : DATE
  * created_at : TIMESTAMP
}

entity "child_physical_stats" as child_stats {
  * id : UUID <<PK>>
  --
  * child_id : UUID <<FK>>
  * height : DECIMAL(5,1)
  * weight : DECIMAL(5,1)
  * date : DATE
  * created_at : TIMESTAMP
}

' === Relationships ===

club ||--o{ user : "has"
club ||--o{ team : "has"
club ||--o{ inventory : "has (nullable)"
club ||--o{ exercise : "has (nullable)"
club ||--o{ location : "has"
club ||--o{ template_training : "has (nullable)"
club ||--o{ training_program : "has (nullable)"
club ||--o{ standard : "has (nullable)"
club ||--o{ set : "has (nullable)"

user ||--o{ user_roles : "has"
role ||--o{ user_roles : "assigned"
user ||--o{ team_coach : "coaches"

team ||--o{ team_coach : "has coaches"
team ||--o{ training : "has"
team ||--o{ child : "has"

location ||--o{ training : "hosts"

training ||--o{ training_ex : "contains"
exercise ||--o{ ex_inv : "requires"
exercise ||--o{ training_ex : "used in"
exercise ||--o{ template_training_ex : "used in"
exercise ||--o{ set_ex : "used in"
exercise ||--o{ ex_focus : "classified by"

inventory ||--o{ ex_inv : "used in"

template_training ||--o{ template_training_ex : "contains"

set ||--o{ set_ex : "contains"

child ||--o{ child_standard : "results"
child ||--o{ child_stats : "measurements"

standard ||--o{ child_standard : "measured by"

user ||--o{ training : "created"

' === Enums ===

enum "ExerciseType" as ex_type {
  ICE
  LAND
}

enum "TrainingPart" as training_part {
  BEGINNING
  MIDDLE
  END
}

enum "Focus" as focus_enum {
  STRENGTH
  ENDURANCE
  COORDINATION
  SPEED
  FLEXIBILITY
  TECHNICAL
}

enum "PreparationType" as prep_type {
  TECHNICAL
  PHYSICAL
  PSYCHOLOGICAL
  TACTICAL
}

enum "FileType" as file_type {
  CLUB_LOGO
  USER_AVATAR
  TEAM_LOGO
  EXERCISE_PICTURE
}

enum "Roles" as roles_enum {
  ROLE_ADMIN
  ROLE_CLUB
  ROLE_METHODIST
  ROLE_CLUB_METHODIST
  ROLE_COACH
  ROLE_MAIN_COACH
}

enum "Intensity" as intensity {
  MAXIMUM
  SUBMAXIMUM
  HIGH
  MEDIUM
  LOW
}

enum "LoadLevel" as load_level {
  MAXIMUM
  SUBMAXIMUM
  HIGH
  MEDIUM
  LOW
}

enum "TrainingCycle" as training_cycle {
  WEEK
  MONTH
  THREE_MONTHS
  YEAR
}

enum "WorkMode" as work_mode {
  ANAEROBIC_ALACTIC
  ANAEROBIC_MIXED
  ANAEROBIC_LACTIC
  AEROBIC
  AEROBIC_RECOVERY
}

enum "Gender" as gender {
  MALE
  FEMALE
}

enum "StandardUnit" as standard_unit {
  SECONDS
  MINUTES
  CENTIMETERS
  METERS
}

note bottom of exercise : uses ExerciseType, TrainingPart,\nPreparationType; Focus хранится\nв exercise_focuses
note bottom of file_type : defines subdirectory,\nmax size, allowed MIME types
note bottom of roles_enum : stored in "roles" table
note bottom of intensity : интенсивность:\nМаксимальная, Субмаксимальная,\nВысокая, Средняя, Низкая
note bottom of load_level : уровень нагрузки:\nМаксимальная, Субмаксимальная,\nВысокая, Средняя, Низкая
note bottom of training_cycle : цикл программы обучения:\nНеделя, Месяц, 3 месяца, Год
note bottom of work_mode : режим работы:\nопределяется ExerciseCalculator
note bottom of gender : пол: Мужской, Женский
note bottom of standard_unit : единицы измерения норматива

note top of training_ex
  all *_exercises tables:\n
  rest_duration — рассчитывается\n
  work_mode — рассчитывается\n
  total_time — рассчитывается\n
  через ExerciseCalculator
end note

note top of set
  Сет — набор стандартных упражнений\n
  для фазы тренировки (разминка, заминка).
end note

note top of training_program
  percentage — процент данного load_level\n
  в рамках cycle для указанного birth_year
end note

note top of standard
  type — ExerciseType enum (ICE / LAND)\n
  unit — StandardUnit enum\n
  control_value — эталонное значение норматива
end note

note top of child
  gender — Gender enum
end note

@enduml